Fix issue in integer display when changing word size

--- a/qformat.html
+++ b/qformat.html
@@ -154,6 +154,7 @@
                     }
                     currentNumBits = val;
                     $(numFracBitsID).attr('max', val);
+                    setFormFormat(currentFormat, false);
                     if (calculate) {
                         recalculate();
                     }
