More tweaks to font sizing

--- a/qformat.html
+++ b/qformat.html
@@ -11,12 +11,17 @@
                 font-family: sans-serif;
             }
 
+            html {
+                font-size: calc(14px + 0.7vw);
+            }
+
             body {
-                font-size: 16px;
+                font-size: inherit;
             }
 
             h1 {
                 margin: 20px 0;
+                font-size: 2em;
             }
 
             p {
@@ -66,12 +71,12 @@
 
             /* Floating column for labels: 25% width */
             .col.w25 {
-                width: 25%;
+                width: 27.5%;
             }
 
             /* Floating column for inputs: 75% width */
             .col.w75 {
-                width: 75%;
+                width: 72.5%;
             }
 
             .control-grp {
@@ -91,17 +96,6 @@
 
             input#integer, input#float {
                 font-family: monospace;
-            }
-
-            @media screen and (min-width: 320px) {
-                body {
-                    font-size: calc(16px + 4 * ((100vw - 320px) / 680));
-                }
-            }
-            @media screen and (min-width: 1000px) {
-                body {
-                    font-size: 20px;
-                }
             }
 
             /* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
