Fix typo in page

--- a/qformat.html
+++ b/qformat.html
@@ -416,7 +416,7 @@
         ---><fieldset>
                 <legend>Convert</legend>
 
-                <p>Type an integer of float in the boxes below. Click or tab away to update.</p>
+                <p>Type an integer or float in the boxes below. Click or tab away to update.</p>
 
                 <div class="control-grp">
                     <div class="col w25">
