Update font inheritance from html

--- a/qformat.html
+++ b/qformat.html
@@ -10,14 +10,11 @@
                 padding: 10px;
                 box-sizing: border-box;
                 font-family: sans-serif;
-            }
-
-            html {
                 font-size: calc(14px + 0.5vw);
             }
 
             body {
-                font-size: inherit;
+                font: inherit;
             }
 
             h1 {
