--- a/qformat.html
+++ b/qformat.html
@@ -31,6 +31,7 @@
                 width: 100%;
                 display: inline-block;
                 vertical-align: top;
+                margin: 2px;
             }
 
             legend {
@@ -102,7 +103,7 @@
             }
 
             /* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
-            @media screen and (max-width: 600px) {
+            @media screen and (max-width: 444px) {
                 .col.w25, .col.w75 {
                     width: 100%;
                     margin-top: 0;
