Another font size change

--- a/qformat.html
+++ b/qformat.html
@@ -10,7 +10,7 @@
                 padding: 10px;
                 box-sizing: border-box;
                 font-family: sans-serif;
-                font-size: calc(14px + 0.5vw);
+                font-size: 16px;
             }
 
             body {
